--- a/src/app/styles/form.scss
+++ b/src/app/styles/form.scss
@@ -4,4 +4,32 @@
     background-color: white;
     height: 230px;
     width: 350px;
+    border-radius: 10px;
+    
+    h1{
+     margin-bottom: 5px;
+     font-size: 2em;
+     font-family: 'Courier New', Courier, monospace;
+    }
+}
+.form-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    // border-radius: 20px;
+    label{
+        display: flex;
+        flex-direction: column;
+    }
+    input{
+        border: 2px solid black;
+    }
+}
+.button{
+    background: #000;
+    color: white;
+    width: 100%;
+    border-radius: 10px;
 }
